syntax = "proto3";
package prismfinance.prismcore.ystaking;

option go_package = "github.com/prism-finance/prism-core/x/ystaking/types";

message EventYStakingBond {
  string account_address = 1;
  string amount = 2;
}

message EventYStakingUnbond {
  string account_address = 1;
  string amount = 2;
  string accrued_reward = 3;
  string fee = 4;
}

message EventYStakingExitPool {
  string account_address = 1;
  string accrued_reward = 2;
  string fee = 4;
}

message EventYStakingClaimReward {
  string account_address = 1;
  string accrued_reward = 2;
  string fee = 4;
}

message EventDeactivateYStakingMaturityPool {
  string burnt_bonded_amount = 1;
  string asset_id = 2;
  string maturity_symbol = 3;
}
